--- a/src/template/mapper.template
+++ b/src/template/mapper.template
@@ -1,4 +1,4 @@
-package <package>
+package <package>;
 import org.springframework.jdbc.core.RowMapper;
 import java.sql.ResultSet;
 import java.sql.SQLException;
@@ -7,8 +7,8 @@ public class <Name>Mapper implements RowMapper<<DTO>> {
 
     @Override
     public <DTO> mapRow(ResultSet resultSet, int i) throws SQLException {
-        <DTO> antity=new <DTO>();
+        <DTO> entity=new <DTO>();
         <body-set-entity>
-        return antity;
+        return entity;
     }
 }
