--- a/src/template/dto.template
+++ b/src/template/dto.template
@@ -1,5 +1,6 @@
-package <package>
+package <package>;
 <import>
+import java.io.Serializable;
 public class <name> implements Serializable {
     <atribute>
     <body-set>
