Se agrega la capa de acceso a dato y el control de excepciones

--- a/src/template/businesslogicexception.template
+++ b/src/template/businesslogicexception.template
@@ -1,23 +1,18 @@
 package <package>.exception;
+import <package>.message.ResponseMessage;
+public class BusinessLogicException extends Exception {
 
-public class BusinessLogicException extends Exception{
+	private static final long serialVersionUID = 2962065458808354006L;
+	private final int code;
+	private final String message;
 
-    public BusinessLogicException() {
-    }
+	public ApplicationCustomException (int code, String message) {
+		super(message);
+		this.code = code;
+		this.message = message;
+	}
 
-    public BusinessLogicException(String message) {
-        super(message);
-    }
-
-    public BusinessLogicException(String message, Throwable cause) {
-        super(message, cause);
-    }
-
-    public BusinessLogicException(Throwable cause) {
-        super(cause);
-    }
-
-    public BusinessLogicException(String message, Throwable cause, boolean enableSuppression, boolean writableStackTrace) {
-        super(message, cause, enableSuppression, writableStackTrace);
-    }
+	public ResponseMessage<Object> getResponse(){
+		return new ResponseMessage<>(this.code, this.message, null);
+	}
 }
