--- a/src/template/datapersistinterfaz.template
+++ b/src/template/datapersistinterfaz.template
@@ -4,7 +4,9 @@ import java.util.List;
 import java.util.Map;
 import <base-package>.exception.DataAccesException;
 <IMPORT>
-
+/**
+*Code generate for charmarin by softcaribbean
+*/
 
 public interface  <NameClass>  {
 
