--- a/src/template/dto.template
+++ b/src/template/dto.template
@@ -1,6 +1,9 @@
 package <package>;
 <import>
 import java.io.Serializable;
+/**
+*Code generate for charmarin by softcaribbean
+*/
 public class <name> implements Serializable {
     <atribute>
     <body-set>
