--- a/src/template/managerquery.template
+++ b/src/template/managerquery.template
@@ -10,7 +10,9 @@ import org.json.simple.JSONObject;
 import org.json.simple.parser.JSONParser;
 
 
-
+/**
+*Code generate for charmarin by softcaribbean
+*/
 public class ManagerQuery {
 
 	private static final Logger LOG = LogManager.getLogger(ManagerQuery.class);
