--- a/src/template/mapper.template
+++ b/src/template/mapper.template
@@ -3,6 +3,9 @@ import org.springframework.jdbc.core.RowMapper;
 import java.sql.ResultSet;
 import java.sql.SQLException;
 <import>
+/**
+*Code generate for charmarin by softcaribbean
+*/
 public class <Name>Mapper implements RowMapper<<DTO>> {
 
     @Override
